<?xml version="1.0"?>
<package format="2">
  <name>clober_msgs</name>
  <version>1.0.1</version>
  <description>
    The messages for Clober
  </description>
  <maintainer email="ros@clobot.co.kr">clobot-git</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>